// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: MapStoreBase
message MapStoreBase
{	
	
	
	repeated TMapStoreDefine TMapStore = 1; // TMapStore

}

// Defined in table: TMapStore
message TMapStoreDefine
{	
	
	
	optional uint32 Id = 1; // ID
	
	
	optional uint32 ShopId = 2; // 商店标识
	
	
	optional uint32 MoneyType = 3; // 消耗(1金币2钻石)
	
	
	optional uint32 Price = 4; // 售价
	
	
	optional uint32 Nums = 5; // 初始数量

}

